Implemented client for order-service